feat: add @Update annotation for MongoDB update operations